--- a/proyecto-triple/app/analisis/templates/analisis/bar.html
+++ b/proyecto-triple/app/analisis/templates/analisis/bar.html
@@ -21,7 +21,7 @@
         {% if chart_data %}
             <h3>{{ chart_title.capitalize() }}</h3>
             <div>
-                <img src="{{ chart_data }}" alt="Gráfica de distribución por provincia y día de la semana">
+                <img src="{{ chart_data }}" alt="Gráfica de distribución por provincia y día de la semana" id="graf">
             </div>
             <div class="bloque_contenido" id="desglose">
                 <p>
