--- a/proyecto-triple/app/templates/usuarios/tabla.html
+++ b/proyecto-triple/app/templates/usuarios/tabla.html
@@ -8,7 +8,7 @@
     </nav>
   {% if users %}
   <div class="bloque_contenido">
-  <table>
+  <table class="usuarios">
     <thead>
       <tr>
         <th>ID</th>
