--- a/proyecto-triple/app/templates/usuarios/tabla.html
+++ b/proyecto-triple/app/templates/usuarios/tabla.html
@@ -3,8 +3,7 @@
 <div class="container">
   <h1>Panel de Gestión de Usuarios</h1>
     <nav>
-      <a href="{{ url_for('usuarios.create') }}">Crear Usuario</a>
-      <a href="{{ url_for('usuarios.logout') }}">Cerrar sesión</a>
+      <a href="{{ url_for('usuarios.create') }}">Crear Nuevo Usuario</a>
     </nav>
   {% if users %}
   <div class="bloque_contenido">
